2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* operation/visual_console/index.php: Correction for my last commit. Now in this 
	view users can see maps of group "All".

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/reporting/visual_console_builder.editor.js: fixed the type of icon
	when create and after edit.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixed the panel
	propierties for icon in the edition and creation, now it haven't label color
	and have preview icon and map link.

2011-02-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* include/functions_alerts.php: New function get_alert_actions_filter.
	* operation/agentes/estado_agente.php: If user is not admin or doesn't have
	'PM' privileges then don't display alerts of others groups.
	* godmode/alerts/configure_alert_template.php: If user is not admin or doesn't have
	'PM' privileges then don't display templates of others groups.
	* godmode/alerts/configure_alert_action.php: Don't show "create command" option
	in this view if current user is not administrator or or doesn't have
	'PM' privileges.
	* godmode/alerts/alert_list.builder.php: If user is not admin or doesn't have
	'PM' privileges then don't display alerts of others groups.

	Fixes: #3182557, 3182566 	

	Merged bugfix from trunk

	* include/functions_visual_map.php: Added a parameter in function get_user_layouts for 
	return All group or not.
	* godmode/reporting/visual_console_builder.data.php: In map creation only display "All"
	group if user has 'PM' privileges or is administrator.
	* godmode/reporting/map_builder.php: If user is not admin or doesn't have
	'PM' privileges then don't display maps of others groups.