@@ -571,6 +571,7 @@ function get_group_agents ($id_group = 0, $search = false, $case = "lower", $noA
 	}
 	
 	$sql = sprintf ("SELECT id_agente, nombre FROM tagente %s ORDER BY nombre", $search_sql);
+	
 	$result = get_db_all_rows_sql ($sql);
 	
 	if ($result === false)
@@ -579,14 +580,15 @@ function get_group_agents ($id_group = 0, $search = false, $case = "lower", $noA
 	$agents = array ();
 	foreach ($result as $row) {
 		switch ($case) {
-		case "lower":
-			$agents[$row["id_agente"]] = mb_strtolower ($row["nombre"], "UTF-8");
-		break;	
-		case "upper":
-			$agents[$row["id_agente"]] = mb_strtoupper ($row["nombre"], "UTF-8");
-		break;
-		default:
-			$agents[$row["id_agente"]] = $row["nombre"];
+			case "lower":
+				$agents[$row["id_agente"]] = mb_strtolower ($row["nombre"], "UTF-8");
+				break;
+			case "upper":
+				$agents[$row["id_agente"]] = mb_strtoupper ($row["nombre"], "UTF-8");
+				break;
+			default:
+				$agents[$row["id_agente"]] = $row["nombre"];
+				break;
 		}
 	}
 	return ($agents);
